<resources>
    <string name="app_name">ILoveZappos</string>
    <string name="set_notification">Set Notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_setting_title">Notification Setting</string>
    <string name="notification_setting_description">Notify when the price has fallen below: </string>

    <string name="notification_editText_hint">Enter Price</string>
    <string name="notification_set_button_text">Set</string>
    <string name="notification_cancel_button_text">Cancel</string>
    <string name="lowest_price">Lowest Price</string>
</resources>
